Minor test fixes and SuppressWarnings annotations added